--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ authors = [
     {name = "Pradyun Gedam", email = "mail@pradyunsg.me"},
 ]
 
-description = "Streamlined Sphinx theme development."
+description = "A tool for authoring Sphinx themes with a simple (opinionated) workflow."
 readme = "README.md"
 
 dependencies = [
@@ -17,6 +17,7 @@ dependencies = [
   "rich",
   "tomli",
   "nodeenv",
+  "pep621",
 ]
 requires-python = "~=3.7"
 
