--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,11 +13,12 @@ description = "A tool for authoring Sphinx themes with a simple (opinionated) wo
 readme = "README.md"
 
 dependencies = [
-  "packaging",
-  "rich",
-  "tomli",
-  "nodeenv",
-  "pep621",
+  "packaging",   # for Python packaging parsers
+  "rich",        # for output styling
+  "tomli",       # for pyproject.toml parsing
+  "nodeenv",     # for NodeJS isolation
+  "setuptools",  # for nodeenv
+  "pep621",      # for pyproject.toml-based metadata
 ]
 requires-python = "~=3.7"
 
