Explicitly declare the LICENSE

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ authors = [
 
 description = "A tool for authoring Sphinx themes with a simple (opinionated) workflow."
 readme = "README.md"
+license = { file = "LICENSE" }
 
 dependencies = [
   "packaging",   # for Python packaging parsers
