--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ dependencies = [
   "nodeenv",     # for NodeJS isolation
   "setuptools",  # for nodeenv
   "pep621",      # for pyproject.toml-based metadata
-  "typing_extensions; python_version <= 3.7", # for Protocol
+  "typing_extensions ; python_version <= '3.7'", # for Protocol
 ]
 requires-python = ">=3.7"
 
