--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ dependencies = [
   "tomli",       # for pyproject.toml parsing
   "nodeenv",     # for NodeJS isolation
   "setuptools",  # for nodeenv
-  "pep621",      # for pyproject.toml-based metadata
+  "pyproject-metadata",      # for pyproject.toml-based metadata
   "typing_extensions ; python_version <= '3.7'", # for Protocol
 ]
 requires-python = ">=3.7"
