Use tomllib on Python 3.11+

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,9 +17,9 @@ dependencies = [
   "pyproject-metadata",
   "packaging",
   "rich",        # for output styling
-  "tomli",       # for pyproject.toml parsing
   "nodeenv",     # for NodeJS isolation
   "setuptools",  # for nodeenv
+  "tomli ; python_version < '3.11'",       # for pyproject.toml parsing
   "typing_extensions ; python_version <= '3.7'", # for Protocol
 ]
 requires-python = ">=3.7"
