--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,29 +1,28 @@
 repos:
-  - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: v2.4.1
+  - repo: local
     hooks:
       - id: prettier
+        name: Prettier
+        entry: prettier --write --ignore-unknown
+        language: node
+        additional_dependencies: [prettier]
+        types: [text]
+        pass_filenames: true
 
-  - repo: https://github.com/psf/black
-    rev: 21.9b0
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.14.9
     hooks:
-      - id: black
-        language_version: python3.8
+      - id: ruff-check
+      - id: ruff-format
 
   - repo: https://github.com/asottile/blacken-docs
-    rev: v1.11.0
+    rev: 1.20.0
     hooks:
       - id: blacken-docs
-        additional_dependencies: [black==21.9b0]
-
-  - repo: https://github.com/PyCQA/isort
-    rev: 5.9.3
-    hooks:
-      - id: isort
-        files: \.py$
+        additional_dependencies: [black==22.12.0]
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.0.1
+    rev: v6.0.0
     hooks:
       - id: check-builtin-literals
       - id: check-case-conflict
@@ -33,8 +32,3 @@ repos:
       - id: end-of-file-fixer
       - id: forbid-new-submodules
       - id: trailing-whitespace
-
-  - repo: https://gitlab.com/pycqa/flake8
-    rev: 3.9.2
-    hooks:
-      - id: flake8
